Initial improvements to solve the signup submit form problem with CSRF (form did not recognise csrf)

--- a/assets/templates/pages/signup.tmpl
+++ b/assets/templates/pages/signup.tmpl
@@ -1,6 +1,9 @@
 {{template "header" .}}
 
 <form action="/signup" method="POST">
+  <div class="hidden">
+    {{.CSRFField}}
+  </div>
   <div class="py-12 flex justify-center items-center">
     <div class="px-8 py-8 bg-white rounded shadow font-serif">
       <h1 class="pt-4 pb-8 text-center text-xl font-bold text-gray-800">
